--- a/mybatis_springMvc/pom.xml
+++ b/mybatis_springMvc/pom.xml
@@ -22,17 +22,23 @@
 			<!-- 表示开发的时候引入，发布的时候不会加载此包 -->  
 			<scope>test</scope>
 		</dependency>
-	
+		
 		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
+	
+		<!-- <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<version>${spring.version}</version>
-		</dependency>
-		<dependency>
+		</dependency> -->
+		<!-- <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
 			<version>${spring.version}</version>
-		</dependency>
+		</dependency> -->
 		<dependency>  
             <groupId>org.springframework</groupId>  
             <artifactId>spring-oxm</artifactId>  
@@ -43,11 +49,11 @@
             <artifactId>spring-tx</artifactId>  
             <version>${spring.version}</version>  
         </dependency>
-        <dependency>  
+       <!--  <dependency>  
             <groupId>org.springframework</groupId>  
             <artifactId>spring-aop</artifactId>  
             <version>${spring.version}</version>  
-        </dependency>    
+        </dependency>     -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -67,6 +73,16 @@
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
 			<version>${spring.version}</version>
+		</dependency>
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjtools</artifactId>
+			<version>1.8.9</version>
 		</dependency>
 		<dependency>  
             <groupId>org.mybatis</groupId>  
@@ -92,11 +108,11 @@
 			<version>1.0.18</version>
 		</dependency>
 		<!-- 日志文件管理包 -->  
-		<dependency>
+		<!-- <dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${log4j.version}</version>
-		</dependency>
+		</dependency> -->
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
@@ -113,5 +129,43 @@
 		    <artifactId>slf4j-log4j12</artifactId>
 		    <version>${slf4j.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+    		<version>2.8.1</version>
+		</dependency>
+		<dependency>  
+		    <groupId>org.codehaus.jackson</groupId>  
+		    <artifactId>jackson-mapper-lgpl</artifactId>  
+	    	<version>1.9.6</version>
+		</dependency> 
+	    <dependency>  
+		    <groupId>org.codehaus.jackson</groupId>  
+		    <artifactId>jackson-mapper-asl</artifactId>  
+    		<version>1.9.6</version>  
+		</dependency>   
 	</dependencies>
+	<build>
+		<finalName>eshop</finalName>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+					<encoding>UTF-8</encoding>
+				</configuration>
+			</plugin>
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.3</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	
 </project>
