--- a/mybatis_springMvc/pom.xml
+++ b/mybatis_springMvc/pom.xml
@@ -146,15 +146,15 @@
 		</dependency>   
 	</dependencies>
 	<build>
-		<finalName>eshop</finalName>
+		<finalName>mcManager</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.1</version>
 				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.7</source>
+					<target>1.7</target>
 					<encoding>UTF-8</encoding>
 				</configuration>
 			</plugin>
@@ -165,6 +165,24 @@
 					<failOnMissingWebXml>false</failOnMissingWebXml>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.mortbay.jetty</groupId>
+				<artifactId>jetty-maven-plugin</artifactId>
+				<version>8.1.16.v20140903</version>
+				<configuration>
+					<scanIntervalSeconds>5</scanIntervalSeconds>
+					<!--<connectors> -->
+					<!--<port>80</port> -->
+					<!--</connectors> -->
+					<webApp>
+						<contextPath>/wu</contextPath>
+						<defaultsDescriptor>src/main/resources/webdefault.xml</defaultsDescriptor>
+					</webApp>
+					<stopKey />
+					<stopPort />
+				</configuration>
+			</plugin>
+			
 		</plugins>
 	</build>
 	
